--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^7.0.0"
   }
 }
